# gdg_26_semantic_search

backend/: .env  main.py  pyproject.toml
backend/scripts/: agent_console.py  init_db.py  seed_templates.py
backend/src/api/: index.html  main.py
backend/src/api/routers/: chat_router.py  document_router.py  template_router.py
backend/src/application/orchestration/: agent_orchestrator.py
backend/src/application/use_cases/: ingest_document.py  search_documents.py
backend/src/domain/entities/: document.py  template.py
backend/src/domain/ports/: agent_service.py  ocr.py  pdf_generator.py  vector_store.py
backend/src/infrastructure/: config.py
backend/src/infrastructure/adapters/agent/: agent_service_adapter.py  global_graph.py  state.py  tools.py
backend/src/infrastructure/adapters/agent/subgraphs/ingestion_graph/: graph.py  nodes.py
backend/src/infrastructure/adapters/agent/subgraphs/search_graph/: graph.py  nodes.py
backend/src/infrastructure/adapters/agent/subgraphs/template_graph/: graph.py  nodes.py
backend/src/infrastructure/adapters/db/: pgvector_adapter.py
backend/src/infrastructure/adapters/ocr/: tesseract_adapter.py
backend/src/infrastructure/adapters/pdf/: playwright_adapter.py
frontend/src/: App.tsx
frontend/src/components/: Dashboard.tsx  DocumentManager.tsx  GeminiPDFChat.tsx  Sidebar.tsx  TopNav.tsx
frontend/src/hooks/: useAgent.ts  useDictaphone.ts
